Fix: fixed reload